--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/material": "^5.10.13",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "flowbite": "^1.5.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3"
   },
@@ -24,6 +26,9 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
   }
 }
